--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -38,6 +38,7 @@
             android:text="@string/success" />
 
         <TextView
+            android:id="@+id/transaction_description"
             style="@style/CustomerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
