--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,6 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/settings" />
 
+    <item android:id="@+id/delete"
+        android:title="@string/delete_data" />
 </menu>
